--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Sticklit</h1>
 <br>
-<img src="https://unsplash.com/photos/S43Xq2IefyU" height="400">
+<img src="https://unsplash.com/photos/S43Xq2IefyU">
