--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<img src="img/teaser.png">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title> Sticklit </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css" />
+</head>
+<body>
+<img class="full" src="img/teaser.png">
+</body>
+</html>
