--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-<img class="full" src="img/teaser.png">
+  <section class="full">
+  </section>
 </body>
 </html>
