--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  <section class="full">
-  </section>
+  <img class="full" src="img/teaser.png">
+  <img class="full" src="img/a.png">
+  <img class="full" src="img/b.png">
 </body>
 </html>
