--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/a.png">
   <img class="full" src="img/b.png">
+  <img class="full" src="img/c.png">
 </body>
 </html>
