--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <img class="full" src="img/a.png">
   <img class="full" src="img/b.png">
   <img class="full" src="img/c.png">
+    <img class="full" src="img/e.png">
 </body>
 </html>
