--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <img class="full" src="img/b.png">
   <img class="full" src="img/c.png">
     <img class="full" src="img/e.png">
+  <img class="full" src="img/g.png">
+  <img class="full" src="img/h.png">
 </body>
 </html>
