--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
+  <img class="full" src="img/m.png">
 </body>
 </html>
