--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
   <img class="full" src="img/m.png">
+    <img class="full" src="img/o.png">
 </body>
 </html>
