--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <img class="full" src="img/j.png">
   <img class="full" src="img/m.png">
     <img class="full" src="img/o.png">
+  <img class="full" src="img/r.png">
 </body>
 </html>
