--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <img class="full" src="img/m.png">
     <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
+  <img class="full" src="img/u.png">
 </body>
 </html>
