--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
   <img class="full" src="img/u.png">
+    <img class="full" src="img/v.png">
 </body>
 </html>
