--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <img class="full" src="img/r.png">
   <img class="full" src="img/u.png">
     <img class="full" src="img/v.png">
+   <img class="full" src="img/w.png">
 </body>
 </html>
