--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <img class="full" src="img/u.png">
     <img class="full" src="img/v.png">
    <img class="full" src="img/w.png">
+   <img class="full" src="img/z.png">
 </body>
 </html>
