--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <img class="full" src="img/v.png">
    <img class="full" src="img/w.png">
    <img class="full" src="img/z.png">
+   <img class="full" src="img/z1.png">
 </body>
 </html>
