--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
    <img class="full" src="img/w.png">
    <img class="full" src="img/z.png">
    <img class="full" src="img/z1.png">
+     <img class="full" src="img/z2.png">
 </body>
 </html>
