--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <img class="full" src="img/w.png">
    <img class="full" src="img/z.png">
    <img class="full" src="img/z1.png">
+  <img class="full" src="img/z4.png">
   <img class="full" src="img/z3.png">
      <img class="full" src="img/z2.png">
 </body>
