--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
   <img class="full" src="img/z4.png">
   <img class="full" src="img/z3.png">
      <img class="full" src="img/z2.png">
+     <img class="full" src="img/z5.png">
+     <img class="full" src="img/z6.png">
 </body>
 </html>
