--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <img class="full" src="img/z3.png">
      <img class="full" src="img/z5.png">
      <img class="full" src="img/z6.png">
+   <img class="full" src="img/z7.png">
        <img class="full" src="img/z2.png">
 </body>
 </html>
