--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
      <img class="full" src="img/z5.png">
      <img class="full" src="img/z6.png">
    <img class="full" src="img/z7.png">
+   <img class="full" src="img/z8.png">
        <img class="full" src="img/z2.png">
 </body>
 </html>
