--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </script>
 <body>
   <img class="full" src="img/teaser.png">
+  <img class="full" src="img/a1.png">
     <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
