--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
    <img class="full" src="img/z7.png">
    <img class="full" src="img/z8.png">
      <img class="full" src="img/z9.png">
+   <img class="full" src="img/z10.png">
        <img class="full" src="img/z2.png">
 </body>
 </html>
