--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <img class="full" src="img/u.png">
     <img class="full" src="img/v.png">
    <img class="full" src="img/w.png">
+  <img class="full" src="img/m.png">
    <img class="full" src="img/z.png">
    <img class="full" src="img/z1.png">
   <img class="full" src="img/z4.png">
