--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
      <img class="full" src="img/z9.png">
    <img class="full" src="img/z10.png">
        <img class="full" src="img/z2.png">
+  <img class="full" src="img/x.png">
 </body>
 </html>
