--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/a1.png">
    <img class="full" src="img/a11.png">
+   <img class="full" src="img/x1.png">
     <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
