--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
   <img class="full" src="img/u.png">
+    <img class="full" src="img/mm1.png">
+    <img class="full" src="img/mm2.png">
     <img class="full" src="img/v.png">
    <img class="full" src="img/w.png">
   <img class="full" src="img/m.png">
