--- a/index.html
+++ b/index.html
@@ -17,30 +17,31 @@
 </script>
 <body>
   <img class="full" src="img/teaser.png">
-   <img class="full" src="img/a11.png">
-   <img class="full" src="img/x1.png">
-    <img class="full" src="img/e.png">
+  <img class="full" src="img/a11.png">
+  <img class="full" src="img/x1.png">
+  <a class="download"> Download PDF — ENG | HIN </a>
+  <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
-    <img class="full" src="img/o.png">
+  <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
   <img class="full" src="img/u.png">
-    <img class="full" src="img/mm1.png">
-    <img class="full" src="img/mm2.png">
-    <img class="full" src="img/v.png">
-   <img class="full" src="img/w.png">
+  <img class="full" src="img/mm1.png">
+  <img class="full" src="img/mm2.png">
+  <img class="full" src="img/v.png">
+  <img class="full" src="img/w.png">
   <img class="full" src="img/m.png">
-   <img class="full" src="img/z.png">
-   <img class="full" src="img/z1.png">
+  <img class="full" src="img/z.png">
+  <img class="full" src="img/z1.png">
   <img class="full" src="img/z4.png">
   <img class="full" src="img/z3.png">
-     <img class="full" src="img/z5.png">
-     <img class="full" src="img/z6.png">
-   <img class="full" src="img/z7.png">
-   <img class="full" src="img/z8.png">
-     <img class="full" src="img/z9.png">
-   <img class="full" src="img/z10.png">
-       <img class="full" src="img/z2.png">
+  <img class="full" src="img/z5.png">
+  <img class="full" src="img/z6.png">
+  <img class="full" src="img/z7.png">
+  <img class="full" src="img/z8.png">
+  <img class="full" src="img/z9.png">
+  <img class="full" src="img/z10.png">
+  <img class="full" src="img/z2.png">
   <img class="full" src="img/x.png">
 </body>
 </html>
