--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/a11.png">
   <img class="full" src="img/x1.png">
-  <div class="download"> <p>Download PDF — <span class="link"><a href="">ENG</a> <a href="">HIN</a></span> </p></div>
+  <div class="download"> <p>DOWNLOAD STICKERS HERE — <span class="link"><a href="">ENGLISH</a> <a href="">HINDI</a></span> </p></div>
   <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
