--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <img class="full" src="img/x1.png">
   <div class="download">
     <p> DOWNLOAD STICKERS HERE </p> 
-    <a class="link" href="">ENGLISH</a>
+    <a class="link" href="">ENGLISH</a> 
+    <span> &nbsp; &nbsp; &nbsp; </span>
     <a class="link" href="">HINDI</a>
   </div>
   <img class="full" src="img/e.png">
