--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="download">
     <p> DOWNLOAD STICKERS HERE </p> 
     <a class="link" href="">ENGLISH</a> 
-    <a class="link" href="">HINDI</a>
+    <a class="link" target="blank" href="https://drive.google.com/file/d/1qAfGmUXBlJzVtjgwHFEf7L5lMawzEJzv/view?usp=sharing">HINDI</a>
   </div>
   <img class="full" src="img/e.png">
   <img class="full" src="img/g.png">
