--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <img class="full" src="img/x1.png">
   <div class="download">
     <p> DOWNLOAD STICKERS HERE </p> 
-    <a class="link" href="">ENGLISH</a> 
+    <a class="link" target="blank" href="https://drive.google.com/file/d/1hPPVm7rD5g_Vxw8bznrp3jj1em9fmP9F/view?usp=sharing">ENGLISH</a> 
     <a class="link" target="blank" href="https://drive.google.com/file/d/1qAfGmUXBlJzVtjgwHFEf7L5lMawzEJzv/view?usp=sharing">HINDI</a>
   </div>
   <img class="full" src="img/e.png">
