--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <img class="full" src="img/mm2.png">
   <img class="full" src="img/mm3.png">
   <img class="full" src="img/mm4.png">
+  <img class="full" src="img/mm8.png">
+  <img class="full" src="img/mm9.png">
   <img class="full" src="img/v.png">
   <img class="full" src="img/w.png">
   <img class="full" src="img/m.png">
