--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   <img class="full" src="img/mm4.png">
   <img class="full" src="img/mm8.png">
   <img class="full" src="img/mm9.png">
+  <img class="full" src="img/mm10.png">
+  <img class="full" src="img/mm11.png">
+  <img class="full" src="img/mm12.png">
+  <img class="full" src="img/mm13.png">
   <img class="full" src="img/v.png">
   <img class="full" src="img/w.png">
   <img class="full" src="img/m.png">
