--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/a11.png">
+  <img class="full" src="img/mm20.png">
   <img class="full" src="img/x1.png">
   <div class="download">
     <p> DOWNLOAD STICKERS HERE </p> 
