--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <img class="full" src="img/mm11.png">
   <img class="full" src="img/mm12.png">
   <img class="full" src="img/mm13.png">
+  <img class="full" src="img/mm22.png">
   <img class="full" src="img/v.png">
   <img class="full" src="img/w.png">
   <img class="full" src="img/m.png">
