--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/a11.png">
+  <img class="full" src="img/mm30.png">
   <img class="full" src="img/mm20.png">
   <img class="full" src="img/x1.png">
   <div class="download">
@@ -30,6 +31,7 @@
   <img class="full" src="img/j.png">
   <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
+  <img class="full" src="img/mm31.png">
   <img class="full" src="img/u.png">
   <img class="full" src="img/mm1.png">
   <img class="full" src="img/mm2.png">
