--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
   <img class="full" src="img/z7.png">
   <img class="full" src="img/z8.png">
   <img class="full" src="img/z9.png">
+  <img class="full" src="img/z2.png">
 </body>
 </html>
