--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/mm30.png">
   <img class="full" src="img/a11.png">
+  <img class="full" src="img/a325.png">
   <img class="full" src="img/a125.png">
   <img class="full" src="img/mm20.png">
   <img class="full" src="img/x1.png">
