--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a class="link" target="blank" href="https://drive.google.com/file/d/1qAfGmUXBlJzVtjgwHFEf7L5lMawzEJzv/view?usp=sharing">HINDI</a>
   </div>
   <img class="full" src="img/e.png">
+  <img class="full" src="img/e11.png">
   <img class="full" src="img/g.png">
   <img class="full" src="img/j.png">
   <img class="full" src="img/o.png">
