--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <img class="full" src="img/a325.png">
   <img class="full" src="img/a125.png">
   <img class="full" src="img/mm20.png">
+  <img class="full" src="img/mmm20.png">
   
   <div class="download">
   <p> DOWNLOAD STICKERS HERE </p> 
