--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   
   <img class="full" src="img/e.png">
   <img class="full" src="img/e11.png">
+  <img class="full" src="img/lo11.png">
   <img class="full" src="img/j.png">
   <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
