--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <img class="full" src="img/lo11.png">
   <img class="full" src="img/e11.png">
   <img class="full" src="img/j.png">
+  <img class="full" src="img/zz11.png">
   <img class="full" src="img/o.png">
   <img class="full" src="img/r.png">
   <img class="full" src="img/mm31.png">
