--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   
   <img class="full" src="img/e.png">
   <img class="full" src="img/lo11.png">
+  <img class="full" src="img/xxx.png">
+  <img class="full" src="img/xxx1.png">
   <img class="full" src="img/j.png">
   <img class="full" src="img/zz11.png">
   <img class="full" src="img/o.png">
