--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </script>
 <body>
   <img class="full" src="img/teaser.png">
+  <img class="full" src="img/mn123.png">
   <img class="full" src="img/mm30.png">
   <img class="full" src="img/a325.png">
   <img class="full" src="img/a125.png">
