--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <img class="full" src="img/j.png">
   <img class="full" src="img/zz11.png">
   <img class="full" src="img/o.png">
+  <img class="full" src="img/gg.png">
+  <img class="full" src="img/ggg.png">
+  <img class="full" src="img/gggg.png">
   <img class="full" src="img/r.png">
   <img class="full" src="img/mm31.png">
   <img class="full" src="img/u.png">
