--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <img class="full" src="img/mm3.png">
   <img class="full" src="img/mm4.png">
   <img class="full" src="img/mm8.png">
+  <img class="full" src="img/g1.png">
   <img class="full" src="img/mm9.png">
   <img class="full" src="img/mm10.png">
   <img class="full" src="img/mm12.png">
