--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/was.png">
   <img class="full" src="img/sr.png">
+  <img class="full" src="img/fw.png">
   <img class="full" src="img/mn123.png">
   <img class="full" src="img/mm30.png">
   <img class="full" src="img/a325.png">
