--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <img class="full" src="img/fw.png">
   <img class="full" src="img/mn123.png">
   <img class="full" src="img/mm30.png">
+    <img class="full" src="img/me.png">
   <img class="full" src="img/a325.png">
   <img class="full" src="img/a125.png">
   <img class="full" src="img/mm20.png">
