--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <img class="full" src="img/mm21.png">
   <img class="full" src="img/v.png">
   <img class="full" src="img/w.png">
+  <img class="full" src="img/wet.png">
   <img class="full" src="img/m.png">
   <img class="full" src="img/z.png">
   <img class="full" src="img/z1.png">
