--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <img class="full" src="img/w.png">
   <img class="full" src="img/wet.png">
   <img class="full" src="img/m.png">
+  <img class="full" src="img/mnm.png">
   <img class="full" src="img/z.png">
   <img class="full" src="img/z1.png">
   <img class="full" src="img/z4.png">
