--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <img class="full" src="img/teaser.png">
   <img class="full" src="img/was.png">
   <img class="full" src="img/sr.png">
+  <img class="full" src="img/man2.png">
   <img class="full" src="img/fw.png">
+  <img class="full" src="img/man1.png">
   <img class="full" src="img/mn123.png">
   <img class="full" src="img/mm30.png">
     <img class="full" src="img/me.png">
@@ -38,6 +40,8 @@
   <img class="full" src="img/lo11.png">
   <img class="full" src="img/xxx.png">
   <img class="full" src="img/xxx1.png">
+  <img class="full" src="img/man3.png">
+  <img class="full" src="img/man4.png">
   <img class="full" src="img/j.png">
   <img class="full" src="img/zz11.png">
   <img class="full" src="img/o.png">
