--- a/index.html
+++ b/index.html
@@ -85,8 +85,19 @@
    <section id="cha" class="container">
      <aside class="index">CHAPTERS</aside>
      <section class="main slideshow">
-       <img src="img/wall.jpg">
-       <img src="img/wall2.jpg">
+       <img src="img/0.jpg">
+       <img src="img/1.png">
+       <img src="img/2.png">
+       <img src="img/3.png">
+       <img src="img/4.png">
+       <img src="img/5.png">
+       <img src="img/6.png">
+       <img src="img/7.png">
+       <img src="img/8.png">
+       <img src="img/9.png">
+       <img src="img/10.jpg">
+       <img src="img/11.png">
+       <img src="img/12.png">
      </section>
      <aside class="page">IV</aside>
    </section>
