--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <title>STICKLIT — World's Largest Public Library </title>
   <meta name="viewport" charset="utf-8" content="width=device-width, initial scale=1">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main-min.css">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
