--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
      <aside class="index">FORWARD</aside>
      <article class="main">
        <p>'Raman from Orissa, writes screenplays for B-grade movies in Mumbai to make ends meet. When what he set out to do was write and publish a book.'</p>
-       <p>'Sahil from Dharavi, will never read Raman's work even if it gets published. As he can't afford something as simple as a book.'</p>
+       <p>'Sahil from the slums of Dharavi, will never read Raman's work even if it gets published. As he can't afford something as simple as a book.'</p>
      </article>
      <aside class="page">I</aside>
    </section>
 
    <header class="container">
-     <aside class="index">CONTENTS</aside>
+     <aside class="index">CONTENT</aside>
      <nav class="main">
        <ul role="navigation">
          <li class="links"><a href="#int">III<span class="contents">INTRO</span></a></li>
@@ -123,7 +123,7 @@
    <section class="container">
      <aside class="index">PRESS</aside>
      <section class="main bottomline">
-       <blockquote class="quote">'We are thrilled by ideas such as Aristotle being read by a rickshaw puller. We feel that this dialogue between two disparate minds deserves a chance.'<br><span class="author">The Indian Express<span></blockquote>
+       <blockquote class="quote">'We are thrilled by ideas such as Aristotle being read by a rickshaw puller. We feel that this dialogue between two disparate minds deserves a chance.'<br><span class="author">— The Indian Express<span></blockquote>
        <blockquote class="quote">'Think of this intervention in public spaces (with the stickers) as the world's largest public library. Think of the possibilities of a rickshaw-puller reading Shakespeare.'<br><span class="author">— The Telegraph<span></blockquote>
      </section>
      <aside class="page">VII</aside>
