--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </section>
 
    <section id="cha" class="container">
-     <aside class="index">CHAPTERS</aside>
+     <aside class="index">CHAPTERS<br>Swipe for more.</aside>
      <section class="main slideshow">
        <img src="img/0.jpg">
        <img src="img/1.png">
