--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </section>
 
    <section id="cha" class="container">
-     <aside class="index">CHAPTERS<br><br>Swipe for more.</aside>
+     <aside class="index">CHAPTERS</aside>
      <section class="main slideshow">
        <img src="img/0.jpg">
        <img src="img/1.png">
@@ -99,7 +99,7 @@
        <img src="img/11.png">
        <img src="img/12.png">
      </section>
-     <aside class="page">IV</aside>
+     <aside class="page">IV<br>Swipe for more.</aside>
    </section>
 
    <section id="dow" class="container">
