--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
    <section id="dow" class="container">
      <aside class="index">DOWNLOADS</aside>
      <article class="main">
-       <p class="down">Download stickers here: <span class="sticker"><a href="https://drive.google.com/file/d/1hPPVm7rD5g_Vxw8bznrp3jj1em9fmP9F/view" target="blank">English</a></span><span class="sticker"><a href="https://drive.google.com/file/d/1qAfGmUXBlJzVtjgwHFEf7L5lMawzEJzv/view" target="blank">Hindi</a></span></p>
+       <p class="down">Download stickers here: <span class="sticker"><a href="https://drive.google.com/file/d/1p-cR5tWfolDNYpqrhPiAxD0uHmrI89Tl/view?usp=sharing" target="blank">English</a></span><span class="sticker"><a href="https://drive.google.com/file/d/1qAfGmUXBlJzVtjgwHFEf7L5lMawzEJzv/view" target="blank">Hindi</a></span></p>
      </article>
      <aside class="page">V</aside>
    </section>
