--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </script>
  <body>
    <section class="container">
-     <aside class="index">FOREWARD</aside>
+     <aside class="index">FOREWORD</aside>
      <article class="main">
        <p>'Raman from Orissa, writes screenplays for B-grade movies in Mumbai to make ends meet. When what he set out to do was write and publish a book.'</p>
        <p>'Sahil from the slums of Dharavi, will never read Raman's work even if it gets published. As he can't afford something as simple as a book.'</p>
