--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
      <aside class="index">PRESS</aside>
      <section class="main bottomline">
        <blockquote class="quote">'We are thrilled by ideas such as Aristotle being read by a rickshaw puller. We feel that this dialogue between two disparate minds deserves a chance.'<br><span class="author">— The Indian Express<span></blockquote>
-       <blockquote class="quote">'Think of this intervention in public spaces (with the stickers) as the world's largest public library. Think of the possibilities of a rickshaw-puller reading Shakespeare.'<br><span class="author">— The Telegraph<span></blockquote>
+       <blockquote class="quote">'Think of this intervention in public spaces (with the stickers) as the world's largest public library.'<br><span class="author">— The Telegraph<span></blockquote>
      </section>
      <aside class="page">VII</aside>
    </section>
