--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
      </section>
      <aside class="page">IV<br>Swipe for more.</aside>
    </section>
+     
+   <section id="cha" class="container">
+     <aside class="index">VIDEO</aside>
+     <video class="main" autoplay>
+      <source src="img/Sticklit_low.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+     </video>
+     <aside class="page">—</aside>
+   </section>
 
    <section id="dow" class="container">
      <aside class="index">DOWNLOADS</aside>
