--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
      <aside class="page">IV<br>Swipe for more.</aside>
    </section>
      
-   <section id="cha" class="container">
+   <section class="container">
      <aside class="index">VIDEO</aside>
      <video class="main" autoplay>
       <source src="img/Sticklit_low.mp4" type="video/mp4">
