--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
      </section>
      <aside class="page">IV<br>Swipe for more.</aside>
    </section>
-     
+    
+   <!-- "This is the video section"
+
    <section class="container">
      <aside class="index">VIDEO</aside>
      <video class="main" autoplay>
@@ -109,7 +111,9 @@
       Your browser does not support HTML5 video.
      </video>
      <aside class="page">—</aside>
-   </section>
+   </section> 
+
+   -->
 
    <section id="dow" class="container">
      <aside class="index">DOWNLOADS</aside>
