--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
    <section id="cha" class="container">
      <aside class="index">CHAPTERS</aside>
      <section class="main slideshow">
-       <img src="img/0.jpg">
        <img src="img/1.png">
        <img src="img/2.png">
        <img src="img/3.png">
@@ -122,7 +121,7 @@
    <section id="blu" class="container">
      <aside class="index">BLURB</aside>
      <section class="main bottomline">
-       <blockquote class="quote">‘The intriguing idea of #Sticklit’<br><span class="author">— Shashi Tharoor<span></blockquote>
+       <blockquote class="quote">‘’<br>'Really good initiative'<span class="author">—MALFNKTION<span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
      </section>
