--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      <aside class="page">II</aside>
    </header>
 
-   <blockquote class="mention">“The world’s largest public library.”<br><span class="author">The Telegraph<span></blockquote>
+   <blockquote class="mention">‘The world’s largest public library.’<br><span class="author">The Telegraph<span></blockquote>
 
    <section id="int" class="container">
      <aside class="index">INTRO</aside>
@@ -121,7 +121,7 @@
    <section id="blu" class="container">
      <aside class="index">BLURB</aside>
      <section class="main bottomline">
-       <blockquote class="quote">‘’<br>Really good initiative<span class="author"> — MALFNKTION <span></blockquote>
+       <blockquote class="quote">‘Really good initiative’<br><span class="author"> — MALFNKTION <span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
      </section>
