--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
    <section class="container">
      <aside class="index">VIDEO</aside>
-     <video class="main" autoplay>
+     <video class="main" style="width:10%; height:10%;" autoplay>
       <source src="img/Sticklit_low.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
      </video>
@@ -164,7 +164,7 @@
        </article>
        <article>
          <p>Follow</p>
-         <a class="foot" href="https://twitter.com/talesontweet?lang=en" target="blank">twitter</a><br>
+         <a class="foot" href="" target="blank">twitter</a><br>
          <a class="foot" href="https://www.instagram.com/sticklit.in/" target="blank">instagram</a>
        </article>
        <article>
