--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
    <section class="container">
      <aside class="index">VIDEO</aside>
-     <video class="main" style="width:10%; height:10%;" autoplay>
+     <video class="main" style="width:10%; height:10%;">
       <source src="img/Sticklit_low.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
      </video>
