--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
       <source src="img/Sticklit_low.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
      </video>
+     
+     <video class="main" style="width:10%; height:10%;" controls>
+      <source src="img/WAJOODIAT FILM.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+     </video>
      <aside class="page">—</aside>
    </section> 
 
