--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
       Your browser does not support HTML5 video.
      </video>
      <aside class="page">—</aside>
+     
+      <video class="main" style="width:10%; height:10%;" controls>
+      <source src="img/WILDE FILM.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+     </video>
+     <aside class="page">—</aside>
+     
    </section> 
 
    <section id="dow" class="container">
