--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
    <section class="container">
      <aside class="index">CAT</aside>
-     <blockquote class="main wall">We're all stories</blockquote>
+     <blockquote class="wall">We're all stories</blockquote>
      <aside class="page">MAN</aside>
    </section>
    <footer id="con" class="container">
