--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
        <article>
          <p>Follow</p>
          <a class="foot" href="" target="blank">twitter</a><br>
-         <a class="foot" href="https://www.instagram.com/sticklit.in/" target="blank">instagram</a>
+         <a class="foot" href="https://www.instagram.com/stick_lit/?hl=en" target="blank">instagram</a>
        </article>
        <article>
          <p>Feed</p>
