--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
    <section id="blu" class="container">
      <aside class="index">BLURB</aside>
      <section class="main bottomline">
-       <blockquote class="quote">‘Really good initiative’<br><span class="author"> — MALFNKTION <span></blockquote>
+       <blockquote class="quote">‘The intriguing idea of #StickLit’<br><span class="author"> — Shashi Tharoor <span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
      </section>
