--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
        <blockquote class="quote">‘The intriguing idea of #StickLit’<br><span class="author"> — Shashi Tharoor <span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
-     <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Respekt<span></blockquote>
+     <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Tomáš Brolík<span></blockquote>
        </section>
      <aside class="page">VI</aside>
    </section>
