--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
      </video>
      <aside class="page">—</aside>
      
+       <video class="main" style="width:10%; height:10%;" controls>
+      <source src="img/STICKLIT STREET.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+     </video>
+     <aside class="page">—</aside>
+     
    </section> 
 
    <section id="dow" class="container">
