--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>STICKLIT — World's Largest Public Library </title>
+  <title>STICKLIT</title>
+  <meta name="description" content="World's Largest Public Library ">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="STICKLIT">
+  <meta itemprop="description" content="World's Largest Public Library ">
+  <meta itemprop="image" content="http://sticklit.in/img/2.png">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="http://sticklit.in">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="STICKLIT">
+  <meta property="og:description" content="World's Largest Public Library ">
+  <meta property="og:image" content="http://sticklit.in/img/2.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="STICKLIT">
+  <meta name="twitter:description" content="World's Largest Public Library ">
+  <meta name="twitter:image" content="http://sticklit.in/img/2.png">
+    
   <meta name="viewport" charset="utf-8" content="width=device-width, initial scale=1">
   <link rel="stylesheet" href="css/main-min.css">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
