--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
      <article class="main">
        <p>'Raman from Orissa, writes screenplays for B-grade movies in Mumbai to make ends meet. When what he set out to do was write and publish a book.'</p>
        <p>'Sahil from the slums of Dharavi, will never read Raman's work even if it gets published. As he can't afford something as simple as a book.'</p>
+       <p>'We're trying to bring the two disparate worlds together.'</p>
      </article>
      <aside class="page">I</aside>
    </section>
@@ -127,6 +128,7 @@
       <source src="img/WAJOODIAT FILM.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
      </video>
+     <aside class="page">.</aside>
      </section> 
 
    <section id="dow" class="container">
@@ -140,7 +142,7 @@
    <section id="blu" class="container">
      <aside class="index">BLURB</aside>
      <section class="main bottomline">
-       <blockquote class="quote">‘The intriguing idea of #StickLit’<br><span class="author"> — Shashi Tharoor <span></blockquote>
+       <blockquote class="quote">‘The World's Largest Public Library’<br><span class="author"> — The Telegraoh <span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
      <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Tomáš Brolík<span></blockquote>
@@ -169,7 +171,7 @@
 
    <section class="container">
      <aside class="index">CAT</aside>
-     <blockquote class="wall">We're all stories</blockquote>
+     <blockquote class="wall main">We're all stories</blockquote>
      <aside class="page">MAN</aside>
    </section>
    <footer id="con" class="container">
