--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
        <img src="img/10.jpg">
        <img src="img/11.png">
        <img src="img/12.png">
+       <img src="img/13.png">
+       <img src="img/14.png">
+       <img src="img/15.jpg">
+       <img src="img/16.png">
+       <img src="img/17.png">
      </section>
      <aside class="page">IV<br>Swipe for more.</aside>
    </section>
