--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
        <img src="img/12.png">
        <img src="img/13.png">
        <img src="img/14.png">
-       <img src="img/15.jpg">
+       <img src="img/15.png">
        <img src="img/16.png">
        <img src="img/17.png">
      </section>
