--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
    <section id="don" class="container">
      <aside class="index">CONTRIBUTE</aside>
      <article class="main">
-       <p>We run sheerly on blood and passion. But to make posters, it takes money. So we're reaching out to the creative community to help us with a fundraiser. Not in terms of money. But by contributing an artwork (autographed) for the same. Salman Rushdie, Shashi Tharoor, Yuko Shimizu, Malika Favre, Sagmeister & Walsh,among others, have been kind enough to make a contribution. And we're thankful for that. Do write to us if you'd like to contribute or purchase an autographed print. Email us at sticklit@outlook.com or call us here: +91-9999843274. Thank you.</p>
+       <p>We run on blood and passion. But to make posters, it takes money. So we're reaching out to the creative community to help us with a fundraiser. Not in terms of money. But by contributing an artwork (autographed). Salman Rushdie, Shashi Tharoor, Yuko Shimizu, Malika Favre, among others, have been kind enough to contribute. And we're thankful for it. Do write to us if you'd like to contribute or purchase an autographed print. Get in touch – sticklit@outlook.com or +91-9999843274. </p>
      </article>
      <aside class="page">V</aside>
    </section>
