--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
        <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
      <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Tomáš Brolík<span></blockquote>
        </section>
+       <blockquote class="quote">‘Thank you StickLit’<br><span class="author">— The Alternative Nobel Prize <span></blockquote>
+       </section>
      <aside class="page">VII</aside>
    </section>
 
