--- a/index.html
+++ b/index.html
@@ -170,11 +170,9 @@
      <section class="main bottomline">
        <blockquote class="quote">‘The World's Largest Public Library’<br><span class="author"> — The Telegraoh <span></blockquote>
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
-       <blockquote class="quote">‘A book is not a bottle of cola. It’s absinthe.’<br><span class="author">— Anon<span></blockquote>
+       <blockquote class="quote">‘Thank you StickLit’<br><span class="author">— The Alternative Nobel Prize<span></blockquote>
      <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Tomáš Brolík<span></blockquote>
-       </section>
-       <blockquote class="quote">‘Thank you StickLit’<br><span class="author">— The Alternative Nobel Prize <span></blockquote>
-       </section>
+       </section
      <aside class="page">VII</aside>
    </section>
 
