--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
      <aside class="index">VIDEO</aside>
      <video class="main" style="width:10%; height:10%;" controls>
       <source src="img/WAJOODIAT FILM.mp4" type="video/mp4">
+         <source src="img/STICKLIT.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
      </video>
      <aside class="page">.</aside>
