--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
      <aside class="index">CONTRIBUTE</aside>
      <article class="main">
        <p>We run on blood and passion. But to make posters, it takes money. So we're reaching out to the creative community to help us with a fundraiser. Not in terms of money. But by contributing an artwork (autographed). Salman Rushdie, Shashi Tharoor, Yuko Shimizu, Malika Favre, among others, have been kind enough to contribute. And we're thankful for it. Do write to us if you'd like to contribute or purchase an autographed print. sticklit@outlook.com / +91-9999843274 </p>
+       <p class="down">Support our initiative <span class="donate"><a href="https://www.patreon.com/Sticklit" target="blank">Support Us on Patreon</a></span></p>
+
      </article>
      <aside class="page">V</aside>
    </section>
