--- a/index.html
+++ b/index.html
@@ -190,10 +190,21 @@
    <section class="container">
      <aside class="index">PRESS</aside>
      <section class="main bottomline">
+       <blockquote class="quote">'A pen can change the world'<br><span class="author">— The Guardian<span></blockquote>
        <blockquote class="quote">'We are thrilled by ideas such as Aristotle being read by a rickshaw puller. We feel that this dialogue between two disparate minds deserves a chance.'<br><span class="author">— The Indian Express<span></blockquote>
        <blockquote class="quote">'Think of this intervention in public spaces (with the stickers) as the world's largest public library.'<br><span class="author">— The Telegraph<span></blockquote>
      </section>
      <aside class="page">VIII</aside>
+   </section>
+         
+         
+   <section class="container">
+     <aside class="index">BOOK</aside>
+     <section class="main bottomline">
+       <p>This book, The Legacy of Nothing, is an offshoot of the project/initiative #sticklit. It features stories (fictionalised) of people I met while on the streets across India.</p>
+       <p class="down">Get your copy here: <span class="sticker"><a href="https://www.amazon.in/Legacy-Nothing-Manoj-Pandey/dp/9386215624" target="blank">Amazon</a></span></p>
+     </section>
+     <aside class="page">&#x1f4d6;</aside>
    </section>
 
    <blockquote class="mention">#STICKLIT<br><span class="author">write to read<span></blockquote>
