--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
        <blockquote class="quote">‘Aww …’<br><span class="author">— Margaret Atwood<span></blockquote>
        
      <blockquote class="quote">‘ČÍST, ČI NEČÍST ANEB V INDII CHODÍ LITERATURA ZA ČTENÁŘI’<br><span class="author">— Tomáš Brolík<span></blockquote>
-       </section
+       </section>
      <aside class="page">VII</aside>
    </section>
 
