--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
      <aside class="index">BOOK</aside>
      <section class="main">
        <p>This book, The Legacy of Nothing, is an offshoot of the project/initiative #sticklit. It features stories (fictionalised) of people I met while on the streets across India.</p>
-       <img src="img/TLN.jpeg" alt="The Legacy of Nothing" style="width:auto;max-height:60vh;">
+       <img src="img/TLN.jpeg" alt="The Legacy of Nothing" style="max-width:80vw;max-height:60vh;">
        <p class="down">Get your copy here: <span class="sticker"><a href="https://www.amazon.in/Legacy-Nothing-Manoj-Pandey/dp/9386215624" target="blank">Amazon</a></span></p>
      </section>
      <aside class="page">&#x1f4d6;</aside>
